# SmartTask

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/services/: cache_service.py  eval.py  llm_service.py  rag_service.py  vector_service.py
app/utils/: logger.py  metrics.py
documents/: SmartTask_API.txt  SmartTask_Overview.txt  SmartTask_Security.txt  SmartTask_Troubleshooting_Guide.txt  SmartTask_User_Manual.txt
static/: index.html
tests/: conftest.py  test_api.py  test_rag.py
